feat: showcase components in app

--- a/apps/shadcn-ng/src/app/app.component.html
+++ b/apps/shadcn-ng/src/app/app.component.html
@@ -1,1 +1,72 @@
 <router-outlet />
+
+<div class="container flex flex-col justify-center gap-3 my-5">
+  <!-- AVATAR -->
+  <div class="flex gap-3">
+    <shadcn-ng-avatar>
+      <img shadcnNgAvatarImage src="https://picsum.photos/500" alt="" />
+      <div shadcnNgAvatarFallback>CN</div>
+    </shadcn-ng-avatar>
+
+    <shadcn-ng-avatar>
+      <img shadcnNgAvatarImage src="#" alt="" />
+      <div shadcnNgAvatarFallback>CN</div>
+    </shadcn-ng-avatar>
+  </div>
+
+  <!-- BADGE -->
+  <div class="flex gap-3">
+    <shadcn-ng-badge>DEFAULT</shadcn-ng-badge>
+    <shadcn-ng-badge variant="outline">OUTLINE</shadcn-ng-badge>
+    <shadcn-ng-badge variant="secondary">SECONDARY</shadcn-ng-badge>
+    <shadcn-ng-badge variant="destructive">DESTRUCTIVE</shadcn-ng-badge>
+  </div>
+
+  <!-- BUTTON -->
+  <div class="flex gap-3">
+    <button shadcnNgBtn>DEFAULT</button>
+    <button shadcnNgBtn variant="outline">OUTLINE</button>
+    <button shadcnNgBtn variant="secondary">SECONDARY</button>
+    <button shadcnNgBtn variant="destructive">DESTRUCTIVE</button>
+    <button shadcnNgBtn variant="ghost">GHOST</button>
+    <button shadcnNgBtn variant="link">LINK</button>
+    <button shadcnNgBtn size="icon">ICON</button>
+    <button shadcnNgBtn size="lg">LG</button>
+    <button shadcnNgBtn size="sm">SM</button>
+  </div>
+
+  <!-- ALERTS -->
+  <div class="space-y-3">
+    <shadcn-ng-alert>
+      <shadcn-ng-alert-title>
+        Check Out All The New Work
+      </shadcn-ng-alert-title>
+      <shadcn-ng-alert-description>
+        Totally Rad Yo!
+      </shadcn-ng-alert-description>
+    </shadcn-ng-alert>
+
+    <shadcn-ng-alert variant="destructive">
+      <shadcn-ng-alert-title>Uh-Oh!</shadcn-ng-alert-title>
+      <shadcn-ng-alert-description>
+        Something went wrong yo!
+      </shadcn-ng-alert-description>
+    </shadcn-ng-alert>
+  </div>
+
+  <!-- ASPECT RATIO -->
+  <div class="w-1/2 m-auto">
+    <shadcn-ng-aspect-ratio [ratio]="16 / 9">
+      <div class="flex items-center justify-center rounded bg-slate-400">
+        <span class="text-gray-100">16/9 Ratio</span>
+      </div>
+    </shadcn-ng-aspect-ratio>
+  </div>
+  <div class="w-1/2 m-auto">
+    <shadcn-ng-aspect-ratio [ratio]="4 / 3">
+      <div class="flex items-center justify-center rounded bg-slate-400">
+        <span class="text-gray-100">4/3 Ratio</span>
+      </div>
+    </shadcn-ng-aspect-ratio>
+  </div>
+</div>
